plugins {
    id 'java'
    id 'java-library'
}

group = "com.fastline"
version = "0.0.1-SNAPSHOT"
description = 'common'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
// Querydsl 설정
dependencies {
    //querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    //spring security
    api "org.springframework.boot:spring-boot-starter-security"

    // bcrypt
    api 'at.favre.lib:bcrypt:0.10.2'

    //jwt
    api group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    api group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    api group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
}

def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
    main {
        java {
            srcDir querydslDir
        }
    }
}

tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

jar {
    from(querydslDir) // generated Q 클래스(소스)를 포함시키거나 컴파일된 클래스를 포함하게 보장
}
